# vv-clawbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mcp-config.example.json  pyproject.toml
data/: assistant.db
data/chroma/: chroma.sqlite3
docs/: ARCHITECTURE.md  MCP.md  MEMORY.md  RAG.md
scripts/: run.sh
src/clawbot_lib/: __init__.py  agent.py  config.py  database.py  logger.py  main.py
src/clawbot_lib/channels/: __init__.py  slack.py
src/clawbot_lib/mcp/: __init__.py
src/clawbot_lib/memory/: __init__.py
src/clawbot_lib/models/: __init__.py
src/clawbot_lib/rag/: __init__.py
src/clawbot_lib/tools/: __init__.py  scheduler.py
src/slack_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_models.py  test_rag.py
